# aquatic_simulator

./: LICENSE  README.md
aquatic_sim/: CMakeLists.txt  package.xml
aquatic_sim/launch/: usv_uuv_demo_island.launch  usv_uuv_demo_ocean.launch
aquatic_sim/launch/driver/: wamv_localization.launch  wamv_state_publisher.launch  wamvs_driver.launch  wamvs_localization.launch  wamvs_state_publisher.launch
aquatic_sim/launch/robots/: robot_spawner_rexrov2.launch  start_rexrov_pid_controller.launch  upload_rexrov2_beacon.launch  wamv_oceanworld.launch  wamvs_oceanworld.launch  wamvs_rexrov2_oceanworld.launch
aquatic_sim/launch/scenarios/: island.launch  ocean_big_obstacles.launch  ocean_small_obstacles.launch  wamvs_rexrov2_ocean_no_obstacles.launch  wamvs_rexrov2_sandisland_big_obstacles.launch  wamvs_rexrov2_sandisland_different_obstacles.launch  wamvs_rexrov2_sandisland_no_obstacles.launch  wamvs_rexrov2_sandisland_small_obstacles.launch
aquatic_sim/scripts/: install_proto3.sh
aquatic_sim/worlds/: island.world  island_obstacles.world  ocean.world  ocean_big_obstacles.world  ocean_different_obstacles.world  ocean_small_obstacles.world
gazebo_plugins/aquatic_gazebo_sensor_plugins/: CMakeLists.txt  package.xml
gazebo_plugins/aquatic_gazebo_sensor_plugins/include/aquatic_gazebo_sensor_plugins/: BeaconROSPlugin.hh  HydrophoneROSPlugin.hh  ROSBaseModelPlugin.hh  ROSBasePlugin.hh
gazebo_plugins/aquatic_gazebo_sensor_plugins/msgs/: SensorBeacon.proto  SensorHydrophone.proto
gazebo_plugins/aquatic_gazebo_sensor_plugins/src/: BeaconROSPlugin.cc  HydrophoneROSPlugin.cc  ROSBaseModelPlugin.cc  ROSBasePlugin.cc
gazebo_plugins/aquatic_gazebo_sensor_plugins/urdf/: beacon_snippets.xacro  hydrophone_snippets.xacro
gazebo_plugins/aquatic_gazebo_sensor_plugins_msgs/: CMakeLists.txt  package.xml
gazebo_plugins/aquatic_gazebo_sensor_plugins_msgs/msg/: Beacon.msg  Hydrophone.msg
gazebo_plugins/visualization_gazebo_plugins/: CMakeLists.txt  package.xml
gazebo_plugins/visualization_gazebo_plugins/include/waypoints_visualization_plugin/: waypoints_visualization_gazebo_plugin.hh
gazebo_plugins/visualization_gazebo_plugins/src/: waypoints_visualization_gazebo_plugin.cc
robots_usv/usv_minion/: README.md
robots_usv/usv_minion/minion_usv_control/: CMakeLists.txt  package.xml
robots_usv/usv_minion/minion_usv_control/config/: TAM.yaml  thruster_manager.yaml
robots_usv/usv_minion/minion_usv_control/launch/: start_dp_controller.launch  start_pid_controller.launch  start_thruster_manager.launch
robots_usv/usv_minion/minion_usv_description/: CMakeLists.txt  package.xml
robots_usv/usv_minion/minion_usv_description/launch/: upload_minion_usv.launch
robots_usv/usv_minion/minion_usv_description/robots/: minion_usv_default.xacro
robots_usv/usv_minion/minion_usv_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
robots_usv/usv_minion/minion_usv_gazebo/: CMakeLists.txt  package.xml
robots_usv/usv_minion/minion_usv_gazebo/launch/: start_pid_controller_demo.launch
robots_usv/usv_wamv/: CMakeLists.txt  package.xml
robots_usv/usv_wamv/urdf/: gps_wamvs_gazebo.urdf.xacro  macros.xacro  wamv_gazebo.urdf.xacro  wamv_gazebo.xacro
robots_usv/usv_wamv/urdf/sensors/: wamv_3d_lidar.xacro  wamv_camera.xacro  wamv_gps.xacro  wamv_hydrophone.xacro  wamv_imu.xacro
robots_uuv/uuv_rexrov2/: CMakeLists.txt  package.xml
robots_uuv/uuv_rexrov2/robots/: rexrov2_default.xacro
robots_uuv/uuv_rexrov2/urdf/: rexrov2_base.xacro  rexrov2_sensors.xacro
