<?xml version="1.0"?>
<package format="2">
  <name>aquatic_gazebo_sensor_plugins</name>
  <version>0.0.1</version>
  <description>The aquatic_gazebo_sensor_plugins package</description>

  <author email="welcome@ingeniarius.pt">Frederico Vaz</author>
  <maintainer email="andre@ingeniarius.pt">André Araújo</maintainer>
  <maintainer email="daryna@ingeniarius.pt">Daryna Datsenko</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>uuv_gazebo_plugins</depend>
  <depend>aquatic_gazebo_sensor_plugins_msgs</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>image_transport</depend>
  <depend>laser_geometry</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>
</package>
