<?xml version="1.0"?>
<package format="2">
  <name>aquatic_gazebo_sensor_plugins_msgs</name>
  <version>0.0.1</version>
  <description>The gazebo_sensor_plugins_msgs package</description>

  <author email="welcome@ingeniarius.pt">Frederico Vaz</author>
  <maintainer email="andre@ingeniarius.pt">André Araújo</maintainer>
  <maintainer email="daryna@ingeniarius.pt">Daryna Datsenko</maintainer>


  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>geometry_msgs</build_export_depend>

  <export>
  </export>
</package>
